# whist

./: .gitignore  CMakeLists.txt  Makefile  README.md  WhistConfig.h.in
Logic/: AIPlayer.cpp  AIPlayer.h  CMakeLists.txt  Card.cpp  Card.h  Game.cpp  Game.h  Hand.cpp  Hand.h  IPlayer.h  eCardSuit.h
Terminal/: CMakeLists.txt  TerminalCard.cpp  TerminalCard.h  TerminalPlayer.cpp  TerminalPlayer.h  TerminalUtils.cpp  TerminalUtils.h  main.cpp
